-
Type:
Bug
-
Status: Closed (View Workflow)
-
Priority:
Major
-
Resolution: Fixed
-
Affects Version/s: 10.2.25, 10.1.40, 10.3.16, 10.4.6
-
Component/s: Platform Windows, Plugin - Audit
-
Labels:None
Windows does not have syslog, so the server_audit plugin does not try to build syslog support on Windows. Instead, it just defines the syslog-related functions as noops on Windows:
https://github.com/MariaDB/server/blob/mariadb-10.4.6/plugin/server_audit/server_audit.c#L25
server_audit_output_type=SYSLOG can still be set on Windows:
https://github.com/MariaDB/server/blob/mariadb-10.4.6/plugin/server_audit/server_audit.c#L389
https://github.com/MariaDB/server/blob/mariadb-10.4.6/plugin/server_audit/server_audit.c#L2740
Since the syslog functions are defined as noops on Windows, this output type will not do anything.
It seems like it would be better to not allow server_audit_output_type=SYSLOG on Windows.