MDEV-19851 server_audit plugin should not allow server_audit_output_type=SYSLOG on Windows.

'syslog' output type disabled on Windows.